# fabric_espanso

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  database_query.py  gradio_app_query_only.py  lib - Shortcut.lnk  main.py  parameters.py  pyproject.toml  requirements.txt  scratch.ipynb  scratch.py  scratch_fastembed.ipynb  scratch_markdown.ipynb  scratch_query.ipynb  setup.py  streamlit_app_query_only.py  test.md
.streamlit/: config.toml
data/: Fab2Esp_transparent.png:Zone.Identifier
logs/: fabric_to_espanso.log.1
src/fabric_to_espanso/: config.py  database.py  database_query.py  database_updater.py  exceptions.py  file_change_detector.py  file_processor.py  logger.py  markdown_parser.py  yaml_file_generator.py  yaml_generator.py
src/fabrics_processor/: __init__.py  config.py  database.py  database_updater.py  file_change_detector.py  file_processor.py  logger.py  markdown_parser.py  obsidian2fabric.py  output_files_generator.py  output_files_generator_temp.py
src/search_qdrant/: .run_streamlit.sh.swp  .run_streamlit_query_only_terminal_visible.sh.swp  database_query.py  nohup.out  run_query.sh  run_streamlit.bup2  run_streamlit.sh  run_streamlit_query_only_terminal_visible.sh  run_streamlit_terminal_visible.sh  streamlit_app.py  streamlit_app_query_only.py
src/search_qdrant/logs/: fabric_to_espanso.log.1  fabric_to_espanso.log.2  fabric_to_espanso.log.4
