[project]
name = "fabric-to-espanso"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hopsakee", email = "jdejong@posteo.nl"},
]
dependencies = ["qdrant-client>=1.12.1", "ipykernel>=6.29.5"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
